...
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/album_cover" />

        <!-- Nombre del álbum -->
        <TextView
            android:id="@+id/albumTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Nombre del Álbum"
            android:textSize="16sp"
            android:textStyle="bold"
...
